Added to-do list to generator

--- a/Target_Generator.ipynb
+++ b/Target_Generator.ipynb
@@ -14,13 +14,25 @@
    "metadata": {},
    "source": [
     "Sources:\n",
-    "https://github.com/kahngjoonkoh/RandomShapeGenerator/blob/main/main.py\n"
+    "<br> https://github.com/kahngjoonkoh/RandomShapeGenerator.git\n",
+    "<br> https://github.com/elkorchi/2DGeometricShapesGenerator.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afbd5329-b39b-4a98-93c4-2a86f9314f0f",
+   "metadata": {},
+   "source": [
+    "Current To Do List:\n",
+    "- Create function for drawing each type of shape\n",
+    "- Create randomized generator for each shape\n",
+    "- Label each generated image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d61fdea9-2f1e-4326-b402-7ec551ffdbb0",
+   "id": "43a53e12-6152-47a2-8781-e5e32a95e75c",
    "metadata": {},
    "outputs": [],
    "source": []
